deployable/script/k8s-use-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-demo-web
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-demo-web
  template:
    metadata:
      labels:
        app: simple-demo-web
    spec:
      containers:
        - name: simple-demo-web
          image: simple-demo:v1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: simple-demo-service
  namespace: app
  labels:
    app: simple-demo-web
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
  selector:
    app: simple-demo-web
