deployable/script/k8s.yaml
#kubectl -n app logs -f $(kubectl -n app get pods --field-selector status.phase=Running --no-headers -o custom-columns=":metadata.name" | grep simple-demo-web | head -1)

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-demo-web
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-demo-web
  template:
    metadata:
      labels:
        app: simple-demo-web
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      securityContext:
        runAsUser: 8888
        runAsGroup: 9999
        fsGroup: 9999
      containers:
        - name: simple-demo-web
          image: simple-demo:v202207121751
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 60
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
            - mountPath: /app/conf
              name: conf-volume
            - mountPath: /app/log
              name: log-volume
            - mountPath: /app/ignorefolder/h2
              name: h2-volume
            - mountPath: /app/upload-folder
              name: upload-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: conf-volume
          emptyDir: {}
        - name: log-volume
          emptyDir: {}
        - name: h2-volume
          emptyDir: {}
        - name: upload-volume
          emptyDir: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: simple-demo-service
  namespace: app
  labels:
    app: simple-demo-web
spec:
  ports:
    - port: 8080 # between containers for service call for K8s
      targetPort: 8080 # container port
      nodePort: 30080 # by default >30000 for external call
  type: NodePort
  selector:
    app: simple-demo-web
