deployable/script/k8s-use-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-demo-web
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-demo-web
  template:
    metadata:
      labels:
        app: simple-demo-web
    spec:
      containers:
        - name: simple-demo-web
          image: simple-demo:v1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: simple-demo-web
  namespace: app
spec:
  selector:
    app: simple-demo-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
#Have to deploy ingress Nginx first. It will act as an Ingress-Controller:
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.41.2/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeport-ingress
  namespace: app
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-demo-web
            port:
              number: 8080
